2006-09-07  Stepan Kasal  <kasal@ucw.cz>

	* lib/autom4te.in (Automake-preselections): Preselect
	AM_ENABLE_MULTILIB.

2006-09-05  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (Preset Output Variables): srcdir and
	top_srcdir are not necessarily relative.  Problem reported
	by Dries Kimpe.

2006-09-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/autoconf/fortran.m4 (_AC_PROG_FC): Prefer xlf90/xlf95 over
	f90/f95 because the latter drivers of AIX Fortran 9.1 do not
	accept files with extension `.f'.  For consistency, also prefer
	xlf over f77.
	* doc/autoconf.texi (Fortran Compiler): Remove mention of bug
	from last patch.

2006-09-05  Romain Lenglet  <rlenglet@users.forge.objectweb.org>

	* lib/autoconf/erlang.m4 (AC_ERLANG_CHECK_LIB): Added substitution
	of ERLANG_LIB_VER_* variables.
	* doc/autoconf.texi (Erlang Libraries): Document ERLANG_LIB_VER_*
	variables.

2006-09-03  Paul Eggert  <eggert@cs.ucla.edu>
	and Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/autoconf.texi (Limitations of Builtins): Document 'unset'
	bugs of Bash 2.01 and 2.05a.
	(Fortran Compiler): Document that AC_PROG_CC should be called
	before AC_PROG_FC, due to a bug in Autoconf.

2006-09-01  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: New macro AC_CACHE_CHECK_INT.  It replaces the
	old AC_COMPUTE_INT, which now behaves like _AC_COMPUTE_INT
	except the first two arguments are reversed.
	* doc/autoconf.texi (Caching Results): New macro AC_CACHE_CHECK_INT.
	(Generic Compiler Characteristics): AC_COMPUTE_INT no longer
	caches nor outputs a diagnostic.  Suggested by Bruno Haible.
	* lib/autoconf/general.m4 (AC_CACHE_CHECK_INT): New macro,
	equivalent to the old AC_COMPUTE_INT.
	(AC_COMPUTE_INT): No longer caches or reports.  New signature.
	All uses changed to AC_CACHE_CHECK_INT.
	* tests/base.at (AC_CACHE_CHECK_INT): New test.
	* tests/mktests.sh (ac_exclude_lsit): Add AC_CACHE_CHECK_INT.

2006-08-31  Paul Eggert  <eggert@cs.ucla.edu>
